/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec";
option java_multiple_files = true;

// Specs that is loaded by Mobile Harness client from flag
// {@code MobileHarnessClient.FLAG_job_spec_file}. Users could write a protobuf
// text file of this Message, and set it as a option of mobile_test,
// for_example:
//   mobile_test(
//      name = [...],
//      spec_files = [<proto_text_file1>, <proto_text_file2>, ...],
//      ...
//   }
//
// Mobile Harness will load the spec automatically from <proto_text_file>, and
// set the specs to Driver/Decorator respectively. see
// {@code mobileharness.shared.spec.DriverSpec} and
// {@code mobileharness.shared.spec.DecoraterSpec} for more information about
// how to write a proto text file.
message JobSpec {
  // Specs of all drivers in the job.
  optional DriverSpec driver_spec = 1;
  // Specs of all decorators in the job.
  optional DecoratorSpec decorator_spec = 2;
}
